set(base_SRCS
  Timestamp.cc
  Exception.cc
  Thread.cc
  Condition.cc
  CountDownLatch.cc
  ThreadPool.cc
  Logging.cc
  LogStream.cc
  FileUtil.cc
  LogFile.cc
  ProcessInfo.cc
  )

add_library(muduo_base ${base_SRCS})
target_link_libraries(muduo_base pthread rt)

install(TARGETS muduo_base DESTINATION lib)
file(GLOB HEADERS "*.h")
install(FILES ${HEADERS} DESTINATION include/muduo/base)

if(NOT CMAKE_BUILD_NO_EXAMPLES)
  add_subdirectory(tests)
endif()
